<resources>
    <string name="app_name">MyMovieMemoir</string>
    <string name="app_title">My Movie Memoir</string>
    <string name="login_username_ph">e.g. example@gmail.com</string>
    <string name="login_password_ph">password</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="signup_firstname_ph">first name</string>
    <string name="signup_lastname_ph">last name</string>
    <string name="signup_dob_ph">date of birth</string>
    <string name="signup_gender_male">male</string>
    <string name="signup_gender_female">female</string>
    <string name="signup_address_ph">address</string>
    <string name="signup_state_ph">state</string>
    <string name="signup_confirm_password_ph">confirm password</string>
    <string name="signup_button">SIGN UP!</string>
    <string name="watchdate_ph">watch date</string>
    <string name="watchtime_ph">watch time</string>
    <string name="release_ph">release date</string>
    <string name="cinemaname_ph">Cinema name</string>
    <string name="cinemapostcode_ph">Cinema postcode</string>
    <string name="user_rating">user rating</string>
    <string name="memoir_comment">comments</string>
    <string-array name="states">
        <item>Sydney</item>
        <item>Melbourne</item>
        <item>Queensland</item>
        <item>Western Australia</item>
        <item>Tasmania</item>
        <item>South Australia</item>
    </string-array>
    <string name="signup_postcode_ph">postal code</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="topfive_label">Your top 5 movies in 2020</string>
    <string name="search_form_hint">Enter a movie</string>
    <string name="search_button">search!</string>
    <string name="map_name">Cinema location</string>
    <string name="report_title_pie">Total movies per suburb</string>
    <string name="pie_startdate">enter start date</string>
    <string name="pie_enddate">enter end date</string>
    <string name="pie_button">generate chart!</string>
    <string name="report_title_bar">Total movies per month</string>
    <string name="comment_ph">add your comments</string>
    <string name="comment_legend">comments</string>
    <string name="rating_legend">ratings</string>
    <string name="cinemaform_title">Add Cinema</string>
    <string name="cinemaaddress_ph">e.g. 12 Swanston St, VIC</string>
    <string name="cinemaaddress_legend">Cinema address</string>
    <string-array name="chart_year">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>
    <string-array name="sorted">
        <item>items...</item>
        <item>release date - asc</item>
        <item>release date - desc</item>
        <item>user rating - asc</item>
        <item>user rating - desc</item>
        <item>public rating - asc</item>
        <item>public rating - desc</item>
    </string-array>
    <string-array name="filtered">
        <item>None</item>
        <item>Action</item>
        <item>Adventure</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Fantasy</item>
        <item>Horror</item>
        <item>Romance</item>
        <item>Science Fiction</item>
        <item>Thriller</item>
    </string-array>
    <string name="genre_title">Genre:</string>
    <string name="release_title">Release:</string>
    <string name="country_title">Country:</string>
    <string name="director_title">Director(s):</string>
    <string name="synopsis_title">Synopsis:</string>
    <string name="watchlist_button">add to watchlist!</string>
    <string name="memoir_button">add to memoir!</string>
    <string name="cast_title">Cast:</string>
    <string name="watchlist_title">Your Watchlist</string>
    <string name="view_button">view</string>
    <string name="delete_button">delete</string>
    <string name="app_id">248504802877666</string>
    <string name="facebook_login_protocol_schema">fb248504802877666</string>
    <string name="cinemaform_button">Add cinema!</string>
    <string name="cinema_spinner">list of cinemas</string>
    <string name="memoir_title">Your memoir</string>
    <string name="sort_spinner">sorted by</string>
    <string name="filter_spinner">filter by</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
