<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBlack">

    <Button
        android:id="@+id/addcinema_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:background="@drawable/app_button"
        android:text="@string/cinemaform_button"
        android:textColor="@color/primaryWhite"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cinemapostcode_form" />

    <TextView
        android:id="@+id/cinemaname_legend5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="48dp"
        android:text="@string/cinemapostcode_ph"
        android:textColor="@color/primaryWhite"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cinemaaddress_form" />

    <TextView
        android:id="@+id/cinemaaddress_legend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="36dp"
        android:text="@string/cinemaaddress_legend"
        android:textColor="@color/primaryWhite"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cinemaname_form" />

    <TextView
        android:id="@+id/cinemaname_legend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="49dp"
        android:text="@string/cinemaname_ph"
        android:textColor="@color/primaryWhite"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cinemaform_title" />

    <EditText
        android:id="@+id/cinemapostcode_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:alpha="0.8"
        android:background="@drawable/form_fill_shape"
        android:ems="10"
        android:hint="@string/cinemapostcode_ph"
        android:inputType="number"
        android:paddingBottom="8dp"
        android:textColor="@color/primaryWhite"
        android:textColorHint="@color/primaryWhite"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cinemaname_legend5" />

    <EditText
        android:id="@+id/cinemaaddress_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:alpha="0.8"
        android:background="@drawable/form_fill_shape"
        android:ems="10"
        android:hint="@string/cinemaaddress_ph"
        android:inputType="textPostalAddress"
        android:paddingBottom="8dp"
        android:textColor="@color/primaryWhite"
        android:textColorHint="@color/primaryWhite"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cinemaaddress_legend" />

    <EditText
        android:id="@+id/cinemaname_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:alpha="0.8"
        android:background="@drawable/form_fill_shape"
        android:ems="10"
        android:hint="@string/cinemaname_ph"
        android:inputType="textShortMessage"
        android:paddingBottom="8dp"
        android:textColor="@color/primaryWhite"
        android:textColorHint="@color/primaryWhite"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cinemaname_legend" />

    <TextView
        android:id="@+id/cinemaform_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/cinemaform_title"
        android:textColor="@color/primaryRed"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>