<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBlack">

    <Button
        android:id="@+id/next_button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:background="@drawable/app_button"
        android:text="NEXT"
        android:textColor="@color/primaryWhite"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="919dp" />

    <TextView
        android:id="@+id/cinemacomment_legend2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/rating_legend"
        android:textColor="@color/primaryWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cinemacomment_form" />

    <EditText
        android:id="@+id/cinemacomment_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:alpha="0.8"
        android:background="@drawable/form_fill_shape"
        android:ems="10"
        android:hint="@string/comment_ph"
        android:inputType="date"
        android:paddingBottom="8dp"
        android:textColor="@color/primaryWhite"
        android:textColorHint="@color/primaryWhite"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cinemacomment_legend" />

    <TextView
        android:id="@+id/cinemacomment_legend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/comment_legend"
        android:textColor="@color/primaryWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cinemaname_spinner2" />

    <Spinner
        android:id="@+id/cinemaname_spinner2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:background="@color/primaryWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cinemaname_legend2" />

    <TextView
        android:id="@+id/cinemaname_legend2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/cinemapostcode_ph"
        android:textColor="@color/primaryWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cinemaname_spinner" />

    <TextView
        android:id="@+id/cinemaname_legend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/cinemaname_ph"
        android:textColor="@color/primaryWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/watchtime_form" />

    <TextView
        android:id="@+id/watchdate_legend2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/watchtime_ph"
        android:textColor="@color/primaryWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/watchdate_form" />

    <ImageView
        android:id="@+id/time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/watchdate_form"
        app:layout_constraintTop_toBottomOf="@+id/date_picker"
        app:srcCompat="@android:drawable/ic_menu_my_calendar" />

    <EditText
        android:id="@+id/watchtime_form"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="13dp"
        android:alpha="0.8"
        android:background="@drawable/form_fill_shape"
        android:ems="10"
        android:hint="@string/watchtime_ph"
        android:inputType="date"
        android:paddingBottom="8dp"
        android:textColor="@color/primaryWhite"
        android:textColorHint="@color/primaryWhite"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/watchdate_legend2" />

    <ImageView
        android:id="@+id/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/watchdate_form"
        app:layout_constraintTop_toBottomOf="@+id/movie_poster"
        app:srcCompat="@android:drawable/ic_menu_my_calendar" />

    <EditText
        android:id="@+id/watchdate_form"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="13dp"
        android:alpha="0.8"
        android:background="@drawable/form_fill_shape"
        android:ems="10"
        android:hint="@string/watchdate_ph"
        android:inputType="date"
        android:paddingBottom="8dp"
        android:textColor="@color/primaryWhite"
        android:textColorHint="@color/primaryWhite"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/watchdate_legend" />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="fetching the title..."
        android:textColor="@color/primaryRed"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/release_legend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="17dp"
        android:text="@string/release_title"
        android:textColor="@color/primaryWhite"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_title" />

    <TextView
        android:id="@+id/release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="17dp"
        android:text="fetching the release date..."
        android:textColor="@color/primaryWhite"
        app:layout_constraintStart_toEndOf="@+id/release_legend"
        app:layout_constraintTop_toBottomOf="@+id/movie_title" />

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="49dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/release_date"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/watchdate_legend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/watchdate_ph"
        android:textColor="@color/primaryWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_poster" />

    <Spinner
        android:id="@+id/cinemaname_spinner"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:background="@color/primaryWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cinemaname_legend" />

</androidx.constraintlayout.widget.ConstraintLayout>